kleopatra: notepad verify/decrypt button not always greyed out when it should be
Closed, ResolvedPublic

Assigned To
Authored By
ebo
Sep 6 2022, 11:40 AM
Tags

Description

If you have some plain text in the notepad the verify/decrypt button should usually be greyed out.
If it is not and you click it, you get a "It can not be determined..." error.

Under these circumstances the button is not greyed out when it should be:

  • after restart of Kleopatra
  • after encyption and the decryption

Revisions and Commits

Event Timeline

After some discussion with Andre we decided:

  1. We keep both buttons always enabled. Reasoning: We do not want to disallow a valid operation just because our heuristic says that attempting a decryption makes no sense.
  2. Instead of the Encrypt button we switch the Decrypt button to Import if we detect a key block. This way the users can encrypt key blocks (which does make sense; in particular, for protecting exported secret keys), but attempting to decrypt a key block will always fail.

I have implemented this a bit differently in particular with usability (e.g. discoverability of the import possibility) and accessibility in mind:

  • Add a separate Import button instead of re-using the Sign/Encrypt button.

For one, this allows the user to encrypt a public key block. Moreover,
buttons that magically change their meaning are bad for accessibility.

  • Update the three crypto operation buttons in one place.
  • Disable the Verify/Decrypt button if the notepad is empty.
ikloecker changed the task status from Open to Testing.Sep 9 2022, 8:40 AM
ikloecker triaged this task as Normal priority.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a project: Restricted Project.
werner removed a project: Restricted Project.Sep 22 2022, 10:41 AM

works as described.

But what I do not like is that you get a general error if clicking "decrypt" with a public key block in the notepad. I'll make a new ticket for that

ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.