Improve usability and accessibility of the notepad operations

* Add a separate Import button instead of re-using the Sign/Encrypt button.
For one, this allows the user to encrypt a public key block. Moreover,
buttons that magically change their meaning are bad for accessibility.
* Update the three crypto operation buttons in one place.
* Disable the Verify/Decrypt button if the notepad is empty.

GnuPG-bug-id: 6188